# EDA_Agent_I2A2

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/agents/: __init__.py  anomaly_detector.py  code_generator.py  conclusion_generator.py  data_analyzer.py  pattern_detector.py  relationship_analyzer.py
src/core/: code_executor.py  config.py  csv_processor.py  llm_manager.py  logger.py  memory_manager.py  query_interpreter.py
src/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
src/interface/: __init__.py  error_handler.py  session_manager.py  streamlit_components.py  visualization_renderer.py
src/models/: analysis_result.py  enums.py  graph_schema.py  query_schema.py
src/tools/: __init__.py  base.py  basic_stats.py  correlation_analysis.py  minimal_stats.py  missing_data_analysis.py  outlier_detection.py  registry.py  schema_analysis.py  visualization_tools.py
src/utils/: __init__.py  file_handler.py  formatters.py  graph_generator.py  security.py  validators.py
tests/: conftest.py  test_agents.py  test_core.py  test_end_to_end.py  test_graph.py  test_models.py  test_utils.py
tests/fixtures/: .gitkeep  test_data_categorical.csv  test_data_correlation.csv  test_data_large.csv  test_data_outliers.csv  test_data_temporal.csv
